--- a/components/button/Button.module.scss
+++ b/components/button/Button.module.scss
@@ -46,22 +46,22 @@
   text-shadow: 4px 3px 6px rgb(0 0 0 / 31%);
   border-radius: 10px;
   transition: all 0.3s ease-in;
+  @media (max-width: 1100px) {
+    padding: 15px 50px;
+    width: 250px;
+  }
 
+  @include phoneScreen {
+    font-size: 16px;
+    padding: 10px 20px;
+    border: 1.5px solid #fff;
+    letter-spacing: 0.04em;
+  }
+  
   &:hover {
     background: #33953A;
     border-color: #33953A;
     box-shadow: 0 0 123px rgba(22, 131, 8, 0.6);
-
-    @media (max-width: 1100px) {
-      padding: 15px 50px;
-      width: 250px;
-    }
-
-    @media (max-width: 600px) {
-      font-size: 16px;
-      padding: 13px 50px;
-      border: 1.5px solid #fff;
-    }
   }
 }
 
