--- a/components/separator/Separator.module.scss
+++ b/components/separator/Separator.module.scss
@@ -2,8 +2,11 @@
 @import '../../styles/variables.scss';
 
 .separator{
-  margin: 50px 0 20px 0;
+  margin: 100px 0 20px 0;
   text-align: center;
+  @include ipadScreen {
+    margin: 60px 0 15px 0;
+  }
   .separator_title{
     font-family: 'Ubuntu', sans-serif;
     font-style: normal;
