--- a/features/home/news/News.module.scss
+++ b/features/home/news/News.module.scss
@@ -9,16 +9,10 @@
   grid-template-areas:
     "col1 col2 col2"
     "col1 col3 col4";
-  @include pcScreen {
-
-  }
-
-  @include tabletScreen {
-
-  }
 
   @include ipadScreen {
-
+    display: flex;
+    flex-direction: column;
   }
 
   @include phoneScreen {
@@ -53,11 +47,18 @@
 
 .col2 {
   grid-area: col2;
-
   &:hover {
     button {
       padding-left: 20px;
     }
+  }
+
+  @include ipadScreen {
+    height: 380px;
+  }
+  
+  @include phoneScreen {
+    height: 100%;
   }
 }
 
@@ -79,6 +80,14 @@
       padding-left: 20px;
     }
   }
+
+  @include ipadScreen {
+    height: 380px;
+  }
+
+  @include phoneScreen {
+    height: 100%;
+  }
 }
 
 .col1 {
@@ -91,7 +100,15 @@
       @include tabletScreen {
         display: flex;
         align-items: center;
-        border-radius: 20px;
+        flex-direction: column;
+      }
+
+      @include ipadScreen {
+        flex-direction: row;
+        border-radius: 20px 20px 0 0;
+      }
+
+      @include phoneScreen {
         flex-direction: column;
       }
 
@@ -103,6 +120,20 @@
             object-fit: cover;
           }
         }
+
+        @include tabletScreen {
+          width: 100%;
+          height: 380px;
+        }
+
+        @include ipadScreen {
+          width: 50%;
+          height: auto;
+        }
+        
+        @include phoneScreen {
+          width: 100%;
+        }
       }
 
       &_info {
@@ -110,6 +141,18 @@
         display: flex;
         flex-direction: column;
         row-gap: 20px;
+        @media (max-width: 1200px) {
+          padding: 15px;
+        }
+
+        @include ipadScreen {
+          width: 50%;
+        }
+        
+        @include phoneScreen {
+          width: 100%;
+        }
+
         @include SEScreen {
           padding: 0;
           row-gap: 0;
@@ -183,42 +226,65 @@
       align-items: center;
       background: #f3f3f3;
       border-radius: 0 20px 0 0;
+      gap: 20px;
+      overflow: hidden;
       @include tabletScreen {
         display: flex;
-        flex-direction: column;
         align-items: center;
-        border-radius: 20px;
+        border-radius: 0 20px 0 0;
+      }
+
+      @include ipadScreen {
+        flex-direction: row-reverse;
+        gap: 0;
+        height: 100%;
+        border-radius: 0;
+      }
+
+      @include phoneScreen {
+        flex-direction: column;
       }
 
       &_left {
         position: relative;
         height: 300px;
+        width: 50%;
         @include tabletScreen {
           height: auto;
           img {
             object-fit: cover;
           }
         }
-        //width: 50%;
+
+        @include ipadScreen {
+          width: 53%;
+          height: 100%;
+        }
+        
+        @include phoneScreen {
+          width: 100%;
+        }
 
         img {
           object-fit: cover;
-          border-radius: 20px 20px 0 0;
         }
       }
 
       &_info {
-        width: 48%;
+        width: 50%;
         display: flex;
         flex-direction: column;
         row-gap: 20px;
         @include tabletScreen {
-          width: 100%;
           padding: 0;
           row-gap: 0;
         }
+        
+        @include phoneScreen {
+          width: 100%;
+        }
+
         p {
-          font-size: 14px;
           opacity: 0.8;
           line-height: 150%;
           @include tabletScreen {
@@ -256,7 +322,7 @@
         padding: 10px 12px 10px 12px;
         border-radius: 0 0 6px 0;
         @include tabletScreen {
-          border-radius: 20px 0 6px 0;
+          border-radius: 0 0 6px 0;
         }
         svg {
           width: 18px;
@@ -279,7 +345,19 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        background: #f3f3f3;
       }
+
+      @include ipadScreen {
+        flex-direction: row;
+        height: 380px;
+      }
+
+      @include phoneScreen {
+        flex-direction: column;
+        height: 100%;
+      }
+
       &_left {
         position: relative;
         @include tabletScreen {
@@ -290,9 +368,17 @@
               width: 100%;
               padding: 0;
               row-gap: 0;
-              border-radius: 20px 20px 0 0;
             }
           }
+        }
+
+        @include ipadScreen {
+          height: 100%;
+          width: 50%;
+        }
+
+        @include phoneScreen {
+          width: 100%;
         }
       }
 
@@ -306,9 +392,19 @@
         @include tabletScreen {
           display: flex;
           flex-direction: column;
-          border-radius:  0 0 20px 20px;
-
         }
+
+        @include ipadScreen {
+          height: 90%;
+          width: 50%;
+          justify-content: center;
+        }
+
+        @include phoneScreen {
+          width: 95%;
+          height: 100%;
+        }
+
         p {
           color: color(dark);
           line-height: 150%;
@@ -343,9 +439,6 @@
         color: color(white);
         padding: 10px 12px 10px 12px;
         border-radius: 0 0 6px 0;
-        @include tabletScreen {
-          border-radius: 20px 0 6px 0;
-        }
         svg {
           width: 18px;
           height: 18px;
@@ -371,11 +464,33 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        border-radius: 20px;
+      }
+
+      @include ipadScreen {
+        flex-direction: row-reverse;
+        height: 100%;
+        border-radius: 0 0 20px 20px;
+      }
+
+      @include phoneScreen {
+        flex-direction: column;
+        height: 100%;
+        border-radius: 0 0 20px 20px;
       }
 
       &_left {
         position: relative;
+        @include ipadScreen {
+          width: 50%;
+          height: 100%;
+          img {
+            object-fit: cover;
+          }
+        }
+
+        @include phoneScreen {
+          width: 100%;
+        }
       }
 
       &_info {
@@ -386,6 +501,16 @@
         display: flex;
         flex-direction: column;
         row-gap: 20px;
+        @include ipadScreen {
+          width: 50%;
+          height: 100%;
+          justify-content: center;
+        }
+
+        @include phoneScreen {
+          width: 95%;
+          padding: 30px 12px;
+        }
 
         p {
           color: color(white);
