--- a/features/home/selection/Selection.module.scss
+++ b/features/home/selection/Selection.module.scss
@@ -1,3 +1,6 @@
+@import 'styles/mixins.scss';
+@import 'styles/variables.scss';
+
 .selectionContainer{
   font-size: 16px;
   text-align: center;
@@ -5,6 +8,9 @@
   max-width: 60%;
   line-height: 145%;
   margin: 0 auto 4%;
+  @include phoneScreen {
+    max-width: 100%;
+  }
 }
 .selectionButton{
   display: flex;
