--- a/features/resources/tab_certificates/Certificates.module.scss
+++ b/features/resources/tab_certificates/Certificates.module.scss
@@ -1,7 +1,7 @@
 .certificates_container{
   display: flex;
   justify-content: center;
-  margin: 0 auto;
+  margin: 40px auto;
 }
 
 .certificates__items {
