--- a/features/resources/tab_doc/Doc.module.scss
+++ b/features/resources/tab_doc/Doc.module.scss
@@ -1,9 +1,9 @@
 .doc_container{
   display: flex;
   justify-content: center;
-  margin: 0 auto;
+  margin: 40px auto;
 }
 
 .documuntation {
-  margin: 0 0 80px 0;
+  margin: 10px 0 80px 0;
 }
