--- a/components/common/footer/Footer.module.scss
+++ b/components/common/footer/Footer.module.scss
@@ -40,6 +40,64 @@
     li {
       margin: 0 0 0 40px;
 
+      a {
+        color: color(green);
+        font-size: 16px;
+        letter-spacing: 0.025em;
+        position: relative;
+
+        &::after {
+          content: "";
+          display: block;
+          position: absolute;
+          right: 0;
+          bottom: -8px;
+          width: 0;
+          height: 2px;
+          background-color: color(dark);
+          transition: width 0.3s;
+          @media (max-width: 1200px) {
+            display: none;
+          }
+        }
+
+        &.active_menu {
+          color: color(lightgreen);
+
+          &::after {
+            content: "";
+            width: 100%;
+            display: block;
+            position: absolute;
+            left: 0;
+            bottom: -8px;
+            height: 2px;
+            background-color: color(green);
+            transition: width 0.3s;
+
+          }
+        }
+
+        &:hover {
+          color: color(lightgreen);
+
+          &::after {
+            content: "";
+            width: 100%;
+            display: block;
+            position: absolute;
+            left: 0;
+            bottom: -8px;
+            height: 2px;
+            background-color: color(green);
+            transition: width 0.3s;
+            @media (max-width: 1200px) {
+              display: none;
+            }
+          }
+        }
+      }
+
       &:first-child {
         margin: 0;
       }
@@ -103,7 +161,7 @@
       left: 0;
       bottom: -8px;
       height: 2px;
-      background-color:  color(lightgreen);
+      background-color: color(lightgreen);
       transition: width 0.3s;
     }
   }
@@ -165,19 +223,23 @@
     justify-content: center;
     column-gap: 16px;
     height: 24px;
-    a{
-      svg{
+
+    a {
+      svg {
         height: 24px;
         transition: all 0.3s;
-        path{
+
+        path {
           fill: green;
         }
+
         &:hover {
           transition: all 0.3s;
+
           path {
             fill: #1BC47D;
           }
-      }
+        }
       }
     }
 
