--- a/components/common/header/headerNav/HeaderNav.module.scss
+++ b/components/common/header/headerNav/HeaderNav.module.scss
@@ -66,6 +66,7 @@
     font-size: 16px;
     letter-spacing: 0.025em;
     position: relative;
+
     &::after {
       content: "";
       display: block;
@@ -81,8 +82,26 @@
       }
     }
 
+    &.active_menu {
+        color: color(lightgreen);
+
+        &::after {
+          content: "";
+          width: 100%;
+          display: block;
+          position: absolute;
+          left: 0;
+          bottom: -8px;
+          height: 2px;
+          background-color: color(green);
+          transition: width 0.3s;
+
+      }
+    }
+
     &:hover {
       color: color(lightgreen);
+
       &::after {
         content: "";
         width: 100%;
@@ -91,7 +110,7 @@
         left: 0;
         bottom: -8px;
         height: 2px;
-        background-color:  color(green);
+        background-color: color(green);
         transition: width 0.3s;
         @media (max-width: 1200px) {
           display: none;
