--- a/features/decision/Decision.module.scss
+++ b/features/decision/Decision.module.scss
@@ -8,6 +8,10 @@
   gap: 18px;
   margin-top: 40px;
   margin-bottom: 60px;
+  @include ipadScreen {
+    padding: 0 10px;
+  }
+  
   img {
     border-radius: 20px;
   }
