--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -2,8 +2,8 @@ $colors: (
         black: #000,
         border: #e1e1e1,
         bredcrumbs_link: #919191,
-        bredcrumbs: #b1b1b1,
-
+        bredcrumbs: #BDBDBD,
+        bredcrumbs_hover: #7D7D7D,
         dark: #212121,
         white: #FFF,
         lightgreen: #2E6143,
