--- a/components/breadcrumbs/BreadCrumbs.module.scss
+++ b/components/breadcrumbs/BreadCrumbs.module.scss
@@ -16,13 +16,13 @@
       padding: 6px 0;
 
       a {
-        color: #BDBDBD;
+        color: color(bredcrumbs);
         font-size: 14px;
         transition: all 0.3s;
         letter-spacing: 0.025em;
         position: relative;
         &:hover {
-          color: #7D7D7D;
+          color: color(bredcrumbs_hover);
           &::after {
             width: 100%;
             background-color: #7D7D7D;
