--- a/components/modal/Modal.module.scss
+++ b/components/modal/Modal.module.scss
@@ -35,7 +35,7 @@
     padding: 20px 20px 0 20px;
     svg{
       path{
-        fill:white;
+        fill:rgb(128, 128, 128);
       }
     }
     > div {
