--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -1,9 +1,9 @@
 $colors: (
         black: #000,
         border: #e1e1e1,
-        bredcrumbs_link: #919191,
-        bredcrumbs: #BDBDBD,
-        bredcrumbs_hover: #7D7D7D,
+        bredcrumbs_no_link: #BDBDBD,
+        bredcrumbs: #7D7D7D,
+        bredcrumbs_hover: #BDBDBD,
         dark: #212121,
         white: #FFF,
         lightgreen: #2E6143,
