--- a/components/breadcrumbs/BreadCrumbs.module.scss
+++ b/components/breadcrumbs/BreadCrumbs.module.scss
@@ -13,7 +13,6 @@
     li {
       align-items: center;
       display: flex;
-      padding: 6px 0;
       color: color(bredcrumbs_no_link);
 
       a {
@@ -22,6 +21,7 @@
         transition: all 0.3s;
         letter-spacing: 0.025em;
         position: relative;
+        padding: 6px 0;
         &:hover {
           color: color(bredcrumbs_hover);
           &::after {
@@ -35,7 +35,7 @@
           display: block;
           position: absolute;
           left: 0;
-          bottom: -6px;
+          bottom: 0;
           width: 100%;
           height: 1px;
           background-color: color(bredcrumbs);
