--- a/components/breadcrumbs/BreadCrumbs.module.scss
+++ b/components/breadcrumbs/BreadCrumbs.module.scss
@@ -21,6 +21,7 @@
         font-size: 14px;
         transition: all 0.3s;
         letter-spacing: 0.025em;
+        padding: 6px 0;
         position: relative;
         &:hover {
           color: color(bredcrumbs_hover);
