--- a/features/about/tab_who_we/achievements/Achievements.module.scss
+++ b/features/about/tab_who_we/achievements/Achievements.module.scss
@@ -1,16 +1,21 @@
-@import '../../../../styles/mixins.scss';
-@import '../../../../styles/variables.scss';
+@import 'styles/mixins.scss';
+@import 'styles/variables.scss';
 
-.achievements_container{
+.achievements_container_ul {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
   gap: 20px;
-  margin-bottom: 40px;
+  margin: 0 0 130px 0;
   @include ipadScreen {
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    margin: 0 0 80px 0
   }
 
-  &_item{
+  @include phoneScreen {
+    margin: 0 0 50px 0
+  }
+
+  &_item {
     background: #009247;
     padding: 0 0 15px 0;
     border-radius: 10px;
