--- a/features/contacts/tab_interaction/Interaction.module.scss
+++ b/features/contacts/tab_interaction/Interaction.module.scss
@@ -1,8 +1,12 @@
+@import 'styles/mixins.scss';
+@import 'styles/variables.scss';
+
 .interaction_container {
   max-width: 600px;
   display: flex;
   justify-content: center;
   margin: 40px auto;
+
   &_title {
     h1 {
       font-style: normal;
@@ -93,6 +97,27 @@
     }
   }
 }
+
+.separator__container__title {
+  margin: 30px 0 30px 0;
+  @include ipadScreen {
+    margin-bottom: 3%;
+  }
+}
+
+.telegram__group__container {
+  margin: 0 0 130px 0;
+  padding: 10px 20px;
+  @include ipadScreen {
+    margin-bottom: 80px;
+    padding: 0;
+  }
+
+  @include phoneScreen {
+    margin-bottom: 50px;
+  }
+}
+
 
 .support__phone {
   display: flex;
