--- a/features/contacts/tab_support/Support.module.scss
+++ b/features/contacts/tab_support/Support.module.scss
@@ -8,9 +8,12 @@
   background: #f3f3f3;
   border-radius: 10px;
   padding: 40px 20px 25px 20px;
+  margin-bottom: 80px;
   @media (max-width: 500px) {
     padding: 40px 10px 25px 10px;
+    margin-bottom: 40px;
   }
+
   button {
     width: 220px;
   }
@@ -218,12 +221,18 @@
   }
 }
 
+.separator__container__title {
+  margin: 30px 0 30px 0;
+  @include ipadScreen {
+    margin-bottom: 3%;
+  }
+}
+
 //Теплеграм каналы
 .group__items {
   margin-bottom: 20px;
   .group__item {
     background-color: #f3f3f3;
-    opacity: 0.8;
     padding: 20px;
     border-radius: 10px;
     transition: all 0.3s ease 0s;
