--- a/features/decision/Decision.module.scss
+++ b/features/decision/Decision.module.scss
@@ -7,9 +7,15 @@
   grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
   gap: 18px;
   margin-top: 40px;
-  margin-bottom: 60px;
+  margin-bottom: 130px;
   @include ipadScreen {
     padding: 0 10px;
+    margin-bottom: 80px;
+  }
+
+  @include phoneScreen {
+    padding: 0 10px;
+    margin-bottom: 50px;
   }
   
   img {
