--- a/features/home/about/About.module.scss
+++ b/features/home/about/About.module.scss
@@ -1,6 +1,13 @@
 @import 'styles/mixins.scss';
 @import 'styles/variables.scss';
 
+.separator__title__container {
+  margin: 100px 0 30px 0;
+  @include ipadScreen {
+    margin-bottom: 3%;
+  }
+}
+
 .about {
   &__container {
     width: 100%;
