--- a/features/resources/tab_catalog/Catalog.module.scss
+++ b/features/resources/tab_catalog/Catalog.module.scss
@@ -1,5 +1,5 @@
-@import '../../../styles/mixins.scss';
-@import '../../../styles/variables.scss';
+@import 'styles/mixins.scss';
+@import 'styles/variables.scss';
 
 .catalog_container{
   display: flex;
@@ -26,14 +26,24 @@
 .catalog_title {
   display: flex;
   justify-content: space-between;
+  padding: 0 10px;
+  @include ipadScreen {
+    flex-direction: column;
+  }
+
   h1 {
     text-align: left;
     text-transform: uppercase;
     font-size: 30px;
     font-weight: 500;
     color: #212121;
-    width: 100%;
+    @include ipadScreen {
+      font-size: 22px;
+      line-height: 145%;
+      margin-bottom: 3%;
+    }
   }
+
   &:focus-within {
     label {
       transform: translateY(-30px) scale(1);
@@ -71,7 +81,13 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 20px;
-  margin-top: 40px;
+  margin: 40px 0 130px 0;
+  padding: 0 10px;
+  @include ipadScreen {
+    display: flex;
+    flex-direction: column;
+    margin: 20px 0 80px 0;
+  }
   .box_item{
     display: flex;
     align-items: flex-start;
@@ -79,31 +95,64 @@
     padding: 0 18px 0 0;
     border-radius: 8px;
     overflow: hidden;
+    border: 1px solid #F0F0EA;
+    gap: 20px;
     transition: all 0.3s;
-    margin-bottom: 25px;
-    &__images{
-      width: 150px;
-      height: auto;
-      padding: 5px;
+    @include phoneScreen {
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      padding: 0;
+      gap: 0;
+    }
+
+    &__images {
+      height: 100%;
+      width: 28%;
       display: flex;
       align-items: baseline;
-      img{
-        border-radius: 8px;
+      @include phoneScreen {
+        width: 100%;
+      }
+
+      img {
+        object-fit: cover;
       }
     }
-    &__info{
-      margin-left: 25px;
+    
+    &__info {
+      width: 72%;
       padding: 10px 0;
+      @include phoneScreen {
+        width: 100%;
+        padding: 20px;
+      }
+
       &_title{
         font-size: 16px;
+        line-height: 145%;
         color: #212121;
-        margin-bottom: 25px
+        margin-bottom: 25px;
+        @include phoneScreen {
+          text-align: center;
+          margin-bottom: 12px;
+        }
       }
     }
+
     &__item_button{
       display: flex;
       align-items: center;
-      p{
+      @include phoneScreen {
+        justify-content: center;
+      }
+
+      button {
+        padding: 10px 30px;
+        width: auto;
+        font-size: 14px;
+      }
+      p {
         margin: 0 10px;
         color: gray;
       }
