--- a/features/resources/tab_questions/Questions.module.scss
+++ b/features/resources/tab_questions/Questions.module.scss
@@ -8,10 +8,12 @@
 }
 
 .title {
-  margin: 0 0 20px 0;
+  margin: 0 0 30px 0;
   @include ipadScreen {
     margin: 50px 0 20px 0;
+    padding: 0 10px;
   }
+
   p {
     text-align: center;
     margin: -6px 0 0 0;
