--- a/components/common/header/headerIcon/HeaderIcon.module.scss
+++ b/components/common/header/headerIcon/HeaderIcon.module.scss
@@ -2,14 +2,14 @@
 
 .header {
   &__icon {
-    margin: 5px 8px 0 8px;
+    margin: 0 8px 0 8px;
 
     svg {
-      width: 22px;
-      height: 22px;
+      width: 24px;
+      height: 24px;
       fill: rgb(0, 155, 0);
       transition: all 0.3s;
-
+cursor: pointer;
       &:hover {
         path {
           fill: green;
