--- a/features/auth/SignContainer.module.scss
+++ b/features/auth/SignContainer.module.scss
@@ -103,6 +103,7 @@
     display: flex;
     align-items: flex-end;
     justify-content: space-between;
+    margin: 20px 0;
     @include phoneScreen {
       flex-direction: column-reverse;
       align-items: flex-start;
