--- a/features/resources/tab_certificates/Certificates.module.scss
+++ b/features/resources/tab_certificates/Certificates.module.scss
@@ -52,3 +52,53 @@
     }
   }
 }
+
+.sertificates__page__items {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  gap: 30px;
+  padding: 0 10px;
+  margin: 80px 0 130px;
+  @include ipadScreen {
+    margin: 80px 0 100px;
+  }
+
+  @include phoneScreen {
+    margin-bottom: 80px;
+  }
+
+  &__card {
+    &__img {
+      overflow: hidden;
+      border-radius: 10px 10px 0 0;
+      margin: 0 0 20px 0;
+      &:hover {
+        img {
+          transform: scale(1.1);
+        }
+      }
+  
+      img {
+        width: 100%;
+        height: 100%;
+        display: block;
+        transition: all .3s;
+      }
+    }
+
+    h3 {
+      text-align: center;
+      font-size: 22px;
+      font-weight: 400;
+      margin-bottom: 8px;
+      color: color(green);
+    }
+    
+    p {
+      text-align: center;
+      color: color(dark);
+      font-size: 16px;
+      line-height: 145%;
+    }
+  }
+}
