--- a/components/input/input.module.scss
+++ b/components/input/input.module.scss
@@ -1,5 +1,5 @@
-@import '../../styles/mixins.scss';
-@import '../../styles/variables.scss';
+@import 'styles/mixins.scss';
+@import 'styles/variables.scss';
 
 .input__container {
   position: relative;
@@ -51,4 +51,30 @@
       }
     }
   }
+}
+
+.label__container_file{
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  cursor: pointer;
+  gap: 5px;
+  padding-left: 10px;
+}
+
+.label__container_empty{
+  border-bottom: 1px solid color(bredcrumbs);
+  width: 100%;
+  display: flex;
+  height: 100%;
+  cursor: pointer;
+
+}
+
+.div__container_file{
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  cursor: pointer;
 }
