--- a/components/common/layout/Layout.module.scss
+++ b/components/common/layout/Layout.module.scss
@@ -9,11 +9,16 @@
 
 }
 
- .main{
+ .main {
    top: 0;
    bottom: 0;
    width: 100%;
    height: 100vh;
    overflow-x: hidden;
    overflow-y: auto;
+   min-height: 100%;
+   display: flex;
+   flex-direction: column;
  }
+
+
