--- a/features/news/News.module.scss
+++ b/features/news/News.module.scss
@@ -7,7 +7,7 @@
     margin-top: 40px;
     transition: all 0.3s;
     border-radius: 15px;
-    grid-template-columns: repeat(auto-fit, minmax(490px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(440px, 1fr));
     background-color: transparent;
     row-gap: 10px;
     margin-left: 5px;
@@ -152,6 +152,147 @@
   gap: 25px;
   margin-bottom: 50px;
 
+  .news_container {
+    &_item {
+      display: grid;
+      margin-top: 40px;
+      transition: all 0.3s;
+      border-radius: 15px;
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      background-color: transparent;
+      row-gap: 10px;
+      margin-left: 5px;
+      box-shadow: 0 0 35px rgb(126 126 126 / 16%);
+      @include ipadScreen {
+        row-gap: 0;
+      }
+
+      button {
+        transition: all 0.3s;
+      }
+
+      &:hover {
+        button {
+          padding-left: 20px;
+        }
+      }
+
+      &:first-child {
+        transition: all 0.3s;
+      }
+
+/*      &:nth-child(even) {
+        &:hover {
+          box-shadow: 0 0 17px #088122;
+          transition: all 0.3s;
+          border-color: #0AB016;
+        }
+        .news_container_item_right {
+          border-radius: 10px 0 0 10px;
+          @include ipadScreen {
+            border-radius: 0 0 10px 10px;
+            gap: 20px;
+          }
+        }
+
+        img {
+          border-radius: 0 10px 10px 0;
+          @include ipadScreen {
+            order: 0;
+            border-radius: 10px 10px 0 0;
+          }
+        }
+      }*/
+
+      &:hover &_right {
+        background-color: #0AB016;
+        transition: all 0.3s;
+        span {
+          color: white;
+        }
+
+        svg {
+          width: 22px;
+          height: 22px;
+          path {
+
+            fill: white;
+          }
+        }
+
+        &_title {
+          color: white;
+          transition: all 0.3s;
+        }
+
+        &_desc {
+          color: white;
+          transition: all 0.3s;
+
+        }
+      }
+
+      img {
+        width: 100%;
+        height: 330px;
+        border-radius: 10px 0 0 10px;
+        overflow: hidden;
+        order: 0;
+        object-fit: cover;
+        @include ipadScreen {
+          border-radius: 10px 10px 0 0;
+        }
+      }
+
+      &_right {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        padding: 20px 40px;
+        transition: all 0.3s;
+        border-radius: 10px;
+        order: 1;
+        @include ipadScreen {
+          border-radius: 10px;
+          padding: 10px 10px 20px 10px;
+          gap: 30px;
+        }
+
+        span {
+          color: #212121;
+          font-weight: 500;
+          display: flex;
+          align-items: center;
+          gap: 10px;
+        }
+
+        svg {
+          width: 22px;
+          height: 22px;
+        }
+
+        &_title {
+          font-weight: 600;
+          font-size: 35px;
+          font-style: normal;
+          line-height: 50px;
+          letter-spacing: 0.025em;
+          color: #212121;
+        }
+
+        &_desc {
+          font-size: 16px;
+          line-height: 150%;
+          color: #212121;
+          padding-top: 20px;
+          @include ipadScreen {
+            padding-top: 0;
+          }
+        }
+      }
+    }
+  }
+
   &_item {
     &:hover img {
       box-shadow: 0 0 17px #088122;
@@ -202,7 +343,13 @@
         }
       }
     }
-
+    img {
+      width: 100%;
+      height: 376px;
+      object-fit: cover;
+      border-radius: 20px;
+      transition: all 0.3s;
+    }
     &_svg {
 
       svg {
@@ -217,11 +364,4 @@
     }
   }
 
-  img {
-    width: 100%;
-    height: 330px;
-    object-fit: cover;
-    border-radius: 20px;
-    transition: all 0.3s;
-  }
 }
