--- a/features/auth/SignContainer.module.scss
+++ b/features/auth/SignContainer.module.scss
@@ -13,7 +13,8 @@
 .authorization__form {
   max-width: 550px;
   margin: 50px auto 0;
-  background: #f3f3f3;
+  background: color(white);
+  box-shadow: 0px 0px 15px rgb(0 0 0 / 12%);
   border-radius: 10px;
   padding: 25px 20px 30px 20px;
   @include phoneScreen {
@@ -118,7 +119,7 @@
       color: #ff0000;
       padding: 11px 12px;
       text-align: right;
-      border: 1px solid rgb(253, 253, 253);
+      border: 1px solid #efefef;
       background: #fff;
       border-radius: 5px;
       @include phoneScreen {
@@ -139,7 +140,8 @@
 .registration__form {
   max-width: 550px;
   margin: 30px auto 0;
-  background: #f3f3f3;
+  background: color(white);
+  box-shadow: 0px 0px 15px rgb(0 0 0 / 12%);
   border-radius: 10px;
   padding: 20px 20px;
   button {
@@ -305,7 +307,10 @@
 .forgot__form {
   max-width: 550px;
   margin: 200px auto;
+  background: color(white);
+  box-shadow: 0px 0px 15px rgb(0 0 0 / 12%);
   padding: 0 10px;
+  border-radius: 10px;
   button {
     @include phoneScreen {
       width: auto;
@@ -324,8 +329,6 @@
   }
 
   &__item {
-    background: #f3f3f3;
-    border-radius: 10px;
     padding: 20px 20px 30px 20px;
     input {
       width: 100%;
