--- a/features/auth/SignContainer.module.scss
+++ b/features/auth/SignContainer.module.scss
@@ -192,7 +192,7 @@
       color: #ff0000;
       padding: 11px 12px;
       text-align: right;
-      border: 1px solid rgb(253, 253, 253);
+      border: 1px solid #efefef;
       background: #fff;
       border-radius: 5px;
       @media (max-width: 550px) {
