--- a/features/contacts/tab_support/Support.module.scss
+++ b/features/contacts/tab_support/Support.module.scss
@@ -20,6 +20,7 @@
 
   &__items {
     overflow: hidden;
+
     &__title {
       h1 {
         font-size: 30px;
@@ -55,8 +56,10 @@
 
     &__textarea {
       margin: 10px 0 20px 0;
+
       textarea {
         box-sizing: border-box;
+
         &::placeholder {
           box-sizing: border-box;
           font-size: 14px;
@@ -72,29 +75,33 @@
       display: flex;
       justify-content: flex-end;
       @media (max-width: 850px) {
-        max-width: 70%;
+        max-width: 100%;
       }
 
       @media (max-width: 500px) {
-        max-width: 50%;
+        max-width: 100%;
       }
 
-      input{
+      input {
         display: none;
       }
+
       .support__form_file {
         position: absolute;
         left: 100%;
         cursor: pointer;
+
         span {
           display: flex;
           align-items: center;
           gap: 10px;
           font-size: 14px;
+
           svg {
             margin-left: 12px;
           }
         }
+
         input {
           display: none;
         }
@@ -125,6 +132,7 @@
       border: 1px solid rgb(253, 253, 253);
       background: color(white);
       border-radius: 5px;
+
       svg {
         width: 20px;
         height: 20px;
@@ -167,6 +175,7 @@
     width: 100%;
     display: flex;
     flex-direction: column;
+
     input {
       width: 100%;
     }
@@ -177,6 +186,7 @@
       height: 23px;
       opacity: 0;
       transform: translateY(-10px);
+
       span {
         margin: 0 0 0 10px;
       }
@@ -187,12 +197,14 @@
       border-radius: 8px;
       font-size: 12px;
       width: 100%;
+
       .overflow__auto {
         margin-top: 5px;
         opacity: 1;
         transition: all 0.3s;
         transform: translateY(0px);
         height: 23px;
+
         span {
           margin: 0 0 0 10px;
         }
@@ -237,11 +249,13 @@
 //Теплеграм каналы
 .group__items {
   margin-bottom: 20px;
+
   .group__item {
     background-color: #f3f3f3;
     padding: 20px;
     border-radius: 10px;
     transition: all 0.3s ease 0s;
+
     &:hover {
       box-shadow: 0 5px 30px rgba(20, 20, 20, 0.3);
       transform: translateY(-3px);
@@ -274,3 +288,14 @@
   }
 }
 
+.box_field {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 45px;
+  @include phoneScreen {
+    grid-template-columns: 1fr;
+  }
+  .support__form{
+    display: block;
+  }
+}
