--- a/components/input/input.module.scss
+++ b/components/input/input.module.scss
@@ -34,6 +34,7 @@
     font-size: 14px;
     box-sizing: border-box;
     transition: background-color 600000s 0s, color 600000s 0s;
+
     &:focus {
       border-bottom: 1px solid green;
       color: color(green);
@@ -53,7 +54,7 @@
   }
 }
 
-.label__container_file{
+.label__container_file {
   display: flex;
   align-items: center;
   justify-content: flex-end;
@@ -62,16 +63,15 @@
   padding-left: 10px;
 }
 
-.label__container_empty{
+.label__container_empty {
   border-bottom: 1px solid color(bredcrumbs);
   width: 100%;
   display: flex;
-  height: 100%;
   cursor: pointer;
-
+  height: 30px;
 }
 
-.div__container_file{
+.div__container_file {
   width: 100%;
   display: flex;
   align-items: center;
