--- a/features/news/News.module.scss
+++ b/features/news/News.module.scss
@@ -1,5 +1,5 @@
-@import '../../styles/mixins.scss';
-@import '../../styles/variables.scss';
+@import 'styles/mixins.scss';
+@import 'styles/variables.scss';
 
 .news_container {
   &_item {
@@ -21,6 +21,9 @@
     }
 
     &:hover {
+      box-shadow: 0 0 17px #088122;
+      transition: all 0.3s;
+      border-color: #0AB016;
       button {
         padding-left: 20px;
       }
@@ -30,12 +33,7 @@
       transition: all 0.3s;
     }
 
-    &:nth-child(even) {
-      &:hover {
-        box-shadow: 0 0 17px #088122;
-        transition: all 0.3s;
-        border-color: #0AB016;
-      }
+    &_image {
       .news_container_item_right {
         order: 0;
         border-radius: 10px 0 0 10px;
