--- a/components/separator/Separator.module.scss
+++ b/components/separator/Separator.module.scss
@@ -1,11 +1,14 @@
 @import '../../styles/mixins.scss';
 @import '../../styles/variables.scss';
 
-.separator{
+.separator__title__container {
+  margin: 100px 0 30px 0;
   text-align: center;
-  .separator_title{
-    font-family: 'Ubuntu', sans-serif;
-    font-style: normal;
+  @include ipadScreen {
+    margin-bottom: 3%;
+  }
+
+  .separator_title {
     font-weight: 500;
     line-height: 57px;
     font-size: 40px;
@@ -22,3 +25,5 @@
     }
   }
 }
+
+
