--- a/features/contacts/tab_support/Support.module.scss
+++ b/features/contacts/tab_support/Support.module.scss
@@ -5,7 +5,8 @@
 .support__form {
   max-width: 850px;
   margin: 0 auto 0;
-  background: #f3f3f3;
+  background: color(white);
+  box-shadow: 0px 0px 15px rgb(0 0 0 / 12%);
   border-radius: 10px;
   padding: 40px 20px 25px 20px;
   margin-bottom: 80px;
@@ -161,8 +162,8 @@
       color: #ff0000;
       padding: 11px 12px;
       text-align: right;
-      border: 1px solid rgb(253, 253, 253);
-      background: color(white);
+      border: 1px solid #efefef;
+        background: #fff;
       border-radius: 5px;
 
       svg {
