--- a/features/home/about/About.module.scss
+++ b/features/home/about/About.module.scss
@@ -1,14 +1,8 @@
 @import 'styles/mixins.scss';
 @import 'styles/variables.scss';
 
-.separator__title__container {
-  margin: 100px 0 30px 0;
-  @include ipadScreen {
-    margin-bottom: 3%;
-  }
-}
 
-.separator__title__bottom {
+.bottom__separator {
   margin: 100px 0 0 0;
   @include ipadScreen {
     margin-top: 8%;
