--- a/features/typo_size/typo_size.module.scss
+++ b/features/typo_size/typo_size.module.scss
@@ -3,11 +3,11 @@
   grid-template-columns: 250px 1fr;
   align-content: center;
   gap: 40px;
+  margin: 80px 0 130px 0;
+  padding: 0 10px;
 
   @media (max-width: 1270px) {
     display: block;
-  }
-  &_right{
-
+    margin: 50px 0 80px 0;
   }
 }
