--- a/features/auth/SignContainer.module.scss
+++ b/features/auth/SignContainer.module.scss
@@ -79,27 +79,6 @@
     }
   }
 
-  &__item__forgot {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    margin: 0 0 20px 0;
-    input {
-      width: 21px !important;
-    }
-
-    a {
-      color: color(dark);
-      font-size: 14px;
-      margin-top: 5px;
-      transition: all 0.3s;
-      &:hover {
-        color: color(green);
-        transform: translateX(3px);
-      }
-    }
-  }
-
   &__item__answer {
     display: flex;
     align-items: flex-end;
@@ -132,6 +111,24 @@
         height: 20px;
         margin-right: 8px;
       }
+    }
+  }
+}
+
+.checkbox__auth {
+  display: flex;
+  align-items: start;
+  justify-content: space-between;
+
+  a {
+    color: color(dark);
+    font-size: 14px;
+    margin-top: 5px;
+    transition: all 0.3s;
+  
+    &:hover {
+      color: color(green);
+      transform: translateX(3px);
     }
   }
 }
@@ -343,7 +340,7 @@
   }
 
   &__item {
-    padding: 20px 20px 30px 20px;
+    padding: 20px 10px 30px 10px;
     input {
       width: 100%;
     }
