--- a/components/input/input.module.scss
+++ b/components/input/input.module.scss
@@ -64,7 +64,7 @@
 }
 
 .label__container_empty {
-  border-bottom: 1px solid color(bredcrumbs);
+  border-bottom: 1px solid #cdcdcd;
   width: 100%;
   display: flex;
   cursor: pointer;
