--- a/features/about/tab_job/jobModal/ModalJob.module.scss
+++ b/features/about/tab_job/jobModal/ModalJob.module.scss
@@ -1,12 +1,32 @@
-@import '../../../../styles/mixins.scss';
-@import '../../../../styles/variables.scss';
+@import 'styles/mixins.scss';
+@import 'styles/variables.scss';
 
 .job__modal {
   background: color(white);
   border-radius: 10px;
   button {
     width: 100%;
-    margin: 0 0 10px 0;
+    margin: 20px 0 0 0;
+  }
+
+  .checkbox__auth {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    .overflow__auto, .overflow {
+      margin-top: 0;
+    
+      a {
+        color: color(dark);
+        font-size: 14px;
+        margin-top: 5px;
+        transition: all 0.3s;
+        &:hover {
+          color: color(green);
+          transform: translateX(3px);
+        }
+      }
+    }
   }
 
   &__items {
@@ -20,8 +40,8 @@
         text-align: center;
         text-transform: uppercase;
         @include phoneScreen {
-          font-size: 25px;
-          line-height: 22px;
+          font-size: 20px;
+          line-height: 20px;
         }
       }
       p {
@@ -54,8 +74,8 @@
         color: color(dark);
         font-size: 14px;
         line-height: 22px;
+        margin: 15px 0 0 0;
         border: 1px solid #bcbdc0;
-        margin: 20px 0;
         border-radius: 5px;
         @include phoneScreen {
           margin: 10px 0;
@@ -64,61 +84,87 @@
     }
   }
 
-  &__item {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    column-gap: 40px;
-    row-gap: 40px;
-    @include phoneScreen {
-      display: flex;
-      flex-direction: column;
-      row-gap: 0;
-    }
-    
-    ul {
-      width: 100%;
-    }
-
+  .box_field {
+    height: 100%;
     input {
       width: 100%;
     }
-
-    &__forgot {
-      margin: 0 0 50px 0;
-    }
   }
 
-  &__items__added__file {
-    max-width: 60%;
+  .job__modal__added__file {
     position: relative;
-    padding: 20px 10px;
-    border-bottom: 1px solid #7f7f7f;
-    margin: 0 0 20px 0;
+    padding: 20px 0;
     display: flex;
+    justify-content: flex-end;
     @media (max-width: 850px) {
-      max-width: 50%;
+      max-width: 100%;
     }
-
-    @media (max-width: 500px) {
-      max-width: 40%;
+  
+    input {
+      display: none;
     }
-
-    &__items {
+  
+    .input_names {
+      display: flex;
+      gap: 0;
+      align-items: center;
       position: absolute;
-      left: 100%;
-      cursor: pointer;
-      span {
+      z-index: 100;
+      overflow: hidden;
+      width: 65%;
+  
+      @include phoneScreen {
+        width: 40%;
+      }
+  
+      li {
+        padding: 5px;
         display: flex;
         align-items: center;
-        gap: 10px;
-        font-size: 14px;
-        svg {
-          margin-left: 12px;
+        justify-content: start;
+        width: 100%;
+  
+        p {
+          width: 100px;
+          white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          font-size: 14px;
+  
+          @include phoneScreen {
+            width: 65px;
+          }
         }
-      }
-      input {
-        display: none;
+  
+        span {
+          background-color: #e6e6e6;
+          color: color(white);
+          margin-left: 5px;
+          height: 20px;
+          width: 20px;
+          border-radius: 50%;
+          align-items: center;
+          justify-content: center;
+          display: flex;
+          transition: all 0.3s;
+          position: relative;
+  
+          &:after {
+            content: "";
+            background-image: url('../../../../public/images/close.svg');
+            background-size: cover;
+            background-repeat: no-repeat;
+            position: absolute;
+            width: 12px;
+            height: 12px;
+            position: absolute;
+            top: 4px;
+          }
+  
+          &:hover {
+            background-color: #d3d3d3;
+          }
+        }
       }
     }
   }
@@ -128,10 +174,6 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    input {
-      width: 100%;
-    }
-
     .overflow {
       margin-top: 5px;
       transition: all 0.3s;
