--- a/features/contacts/tab_support/Support.module.scss
+++ b/features/contacts/tab_support/Support.module.scss
@@ -75,15 +75,11 @@
 
     .support__form__added__file {
       position: relative;
-      padding: 20px 10px;
+      padding: 20px 0;
       margin: 0 0 20px 0;
       display: flex;
       justify-content: flex-end;
       @media (max-width: 850px) {
-        max-width: 100%;
-      }
-
-      @media (max-width: 500px) {
         max-width: 100%;
       }
 
@@ -93,20 +89,35 @@
 
       .input_names {
         display: flex;
-        gap: 30px;
+        gap: 0;
         align-items: center;
         position: absolute;
         z-index: 100;
+        overflow: hidden;
+        width: 80%;
+        @include phoneScreen {
+          width: 60%;
+        }
 
         li {
-          padding: 5px 10px;
+          padding: 5px;
           display: flex;
           align-items: center;
-          justify-content: center;
-          flex-wrap: wrap;
+          justify-content: start;
+          width: 100%;
+          p {
+            width: 100px;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            font-size: 14px;
+            @include phoneScreen {
+              width: 65px;
+            }
+          }
 
           span {
-            background-color: color(bredcrumbs);
+            background-color: #e6e6e6;
             color: color(white);
             margin-left: 5px;
             height: 20px;
@@ -116,14 +127,21 @@
             justify-content: center;
             display: flex;
             transition: all 0.3s;
+            position: relative;
             &:after{
-              content: "x";
-              font-family: cursive;
+              content: "";
+              background-image: url('../../../public/images/close.svg');
+              background-size: cover;
+              background-repeat: no-repeat;
               position: absolute;
-              top: 5px;
+              width: 12px;
+              height: 12px;
+              position: absolute;
+              top: 4px;
             }
+
             &:hover{
-              background-color: red;
+              background-color: #d3d3d3;
             }
           }
         }
@@ -218,13 +236,7 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-
-    input {
-      width: 100%;
-    }
-
     .overflow {
-      margin-top: 5px;
       transition: all 0.3s;
       height: 23px;
       opacity: 0;
@@ -240,14 +252,12 @@
       border-radius: 8px;
       font-size: 12px;
       width: 100%;
-
       .overflow__auto {
         margin-top: 5px;
         opacity: 1;
         transition: all 0.3s;
         transform: translateY(0px);
         height: 23px;
-
         span {
           margin: 0 0 0 10px;
         }
@@ -337,6 +347,10 @@
   column-gap: 45px;
   @include phoneScreen {
     grid-template-columns: 1fr;
+  }
+
+  input {
+    width: 100%;
   }
 
   .support__form {
